--- a/Days/Days.csproj
+++ b/Days/Days.csproj
@@ -29,25 +29,38 @@
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="ClientApp\src\app\components\habitos\**" />
     <Content Remove="ClientApp\src\app\new-component\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="ClientApp\src\app\components\habitos\**" />
     <None Remove="ClientApp\src\app\new-component\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="ClientApp\src\app\components\habitos\**" />
     <Compile Remove="ClientApp\src\app\new-component\**" />
+    <EmbeddedResource Remove="ClientApp\src\app\components\habitos\**" />
     <EmbeddedResource Remove="ClientApp\src\app\new-component\**" />
+    <TypeScriptCompile Remove="ClientApp\src\app\components\habitos\**" />
     <TypeScriptCompile Remove="ClientApp\src\app\new-component\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\components\habitoscom\habitoscom.component.spec.ts" />
+    <None Remove="ClientApp\src\app\components\habitos\habitos.component.css" />
+    <None Remove="ClientApp\src\app\components\habitos\habitos.component.html" />
+    <None Remove="ClientApp\src\app\components\habitos\habitos.component.ts" />
     <None Remove="ClientApp\src\app\new-component\new-component.component.css" />
     <None Remove="ClientApp\src\app\new-component\new-component.component.html" />
     <None Remove="ClientApp\src\app\new-component\new-component.component.spec.ts" />
     <None Remove="ClientApp\src\app\new-component\new-component.component.ts" />
     <None Remove="ClientApp\src\app\paginas\login\login.component.ts" />
     <None Remove="ClientApp\src\app\paginas\registration\registration.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Remove="ClientApp\src\app\components\habitoscom\habitoscom.component.spec.ts" />
   </ItemGroup>
 
   <ItemGroup>
